<resources>
    <string name="app_name">Clase_Dos</string>
    <string name="Nombre_app">Appventure</string>
    <string name="oscar_andrade">Oscar Andrade</string>
    <string name="comienza">Comienza</string>
    <string name="registrate">Registrate</string>
    <string name="intro">Inicia una nueva aventura con Appventure y descubre una nueva forma de ver el mundo</string>
    <string name="text_intro">La aventura esta por iniciar, por favor inicia sesion</string>
    <string name="sin_cuenta">No tienes cuenta?</string>
    <string name="recu_contra">Recupera tu contraseña</string>

    <!-- Strings para Registro -->
    <string name="titulo_registro">Registro</string>
    <string name="hint_nombres">Nombres</string>
    <string name="hint_apellidos">Apellidos</string>
    <string name="hint_correo">Correo Electrónico</string>
    <string name="hint_contrasena">Contraseña</string>
    <string name="hint_re_contrasena">Re - Contraseña</string>
    <string name="terminos_condiciones">Acepto los Términos y Condiciones</string>
    <string name="btn_registrarse">Registrarse</string>
    <string name="ya_tienes_cuenta">¿Ya tienes cuenta? Inicia sesión</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="inicio">Inicio</string>
    <string name="catalogo">Catalogo</string>
    <string name="favoritos">Favoritos</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="ingresa_con_google">Ingresa con google</string>
    <string name="ingresa">Ingresa</string>
    <string name="contrasena">Contraseña</string>
    <string name="usuario">Usuario</string>
    <string name="cat_logo">Catálogo</string>
    <string name="carrito">Carrito</string>
    <string name="perfil">Perfil</string>
    <string name="gestion_administrativa">Gestión Administrativa</string>
    <string name="usuarios">Usuarios</string>
    <string name="productos_destacados">Productos Destacados</string>
    <string name="imagen_del_producto">Imagen del producto</string>
    <string name="agregar_al_carrito">agregar al carrito</string>

    <!-- Perfil -->
    <string name="titulo_editar_perfil">Editar Perfil</string>
    <string name="btn_guardar_cambios">Guardar Cambios</string>
    <string name="cerrar_sesion">Cerrar Sesion</string>
    <string name="nombre_usuario">Nombre de Usuario</string>
    <string name="editar_perfil">Editar Perfil</string>
    <string name="correo_ejemplo_com">correo@ejemplo.com</string>
    <string name="foto_de_perfil">Foto de perfil</string>
</resources>