<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_favoritos"
            android:title="@string/favoritos"
            android:icon="@android:drawable/star_big_off"/>

        <item
            android:id="@+id/nav_admin"
            android:title="@string/gestion_administrativa"
            android:icon="@android:drawable/list_selector_background"/>

        <item
            android:id="@+id/nav_usuarios"
            android:title="@string/usuarios"
            android:icon="@android:drawable/menu_frame"/>



    </group>

    <item
        android:id="@+id/nav_logout"
        android:icon="@android:drawable/ic_menu_close_clear_cancel"
        android:title="@string/cerrar_sesion"/>

</menu>