<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/pe_ll_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".activities.main.perfil.PerfilEdicionFragment">

    <TextView
        android:id="@+id/pe_tv_titulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/titulo_editar_perfil"
        android:textColor="@color/rosa"
        android:textSize="32sp"
        android:textStyle="bold"
        android:layout_marginTop="20dp"
        android:gravity="center"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="25dp"
            android:orientation="vertical">

            <!-- Contenedor para la foto de perfil -->
            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="25dp">

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/pe_iv_foto"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:padding="2dp"
                    app:strokeWidth="2dp"
                    app:strokeColor="@color/rosa"
                    android:scaleType="centerCrop"
                    app:shapeAppearanceOverlay="@style/CircleImage"
                    app:srcCompat="@mipmap/ic_launcher_round" />

                <ImageView
                    android:id="@+id/pe_iv_camara"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_gravity="bottom|end"
                    android:background="@drawable/ic_launcher_background"
                    android:padding="8dp"
                    android:src="@android:drawable/ic_menu_camera"
                    app:tint="@color/white" />
            </FrameLayout>

            <EditText
                android:id="@+id/pe_et_nombres"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:background="@android:color/white"
                android:hint="@string/hint_nombres"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                android:padding="10dp"
                android:textColor="@color/black"
                android:layout_marginBottom="12dp" />

            <EditText
                android:id="@+id/pe_et_apellidos"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:background="@android:color/white"
                android:hint="@string/hint_apellidos"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                android:padding="10dp"
                android:textColor="@color/black"
                android:layout_marginBottom="12dp" />

            <EditText
                android:id="@+id/pe_et_correo"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:background="@android:color/white"
                android:hint="@string/hint_correo"
                android:importantForAutofill="no"
                android:inputType="textEmailAddress"
                android:padding="10dp"
                android:textColor="@color/black"
                android:layout_marginBottom="12dp" />

            <EditText
                android:id="@+id/pe_et_contrasena"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:background="@android:color/white"
                android:hint="@string/hint_contrasena"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                android:padding="10dp"
                android:textColor="@color/black"
                android:layout_marginBottom="12dp" />

            <EditText
                android:id="@+id/pe_et_re_contrasena"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:background="@android:color/white"
                android:hint="@string/hint_re_contrasena"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                android:padding="10dp"
                android:textColor="@color/black"
                android:layout_marginBottom="30dp" />

            <Button
                android:id="@+id/pe_btn_guardar"
                android:layout_width="200dp"
                android:layout_height="55dp"
                android:backgroundTint="@color/rosa"
                android:text="@string/btn_guardar_cambios"
                android:textSize="18sp"
                app:strokeColor="@color/white"
                app:strokeWidth="2dp" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>
